2022-11-28
* Shebang changed to /usr/bin/env bash in all scripts.
* New feedback::help function added to feedback lib.
* Created structure to work with  bb_get_nr_list

2022-11-19
* Emboss added to the list of dependencies check.
* BB main scripts now moved to a directory called "source".
* in "installbiobash" script BB main scripts are now copied from "source" directory.

2022-11-3
* Solved bug in setup_environment that hardcoded the full $PATH in .bashrc file. This prevented any actualization of PATH variable to take effect, because it was already hardcoded by Biobash installer. Now the variable "$PATH" is writen in the .bashrc file not the hardcoded path (line 208).
* Fixed bug in bb_get_fasta_headers line 116 with expected unary operator when running script with "-i".

2022-11-3
* Uninstaller now cleans up bashrc file ufter unistallation.
* Other minor aesthetic updates  implemented in install/Uninstall.

2022-11-2
* Uninstallation now erases BB paths from PATH. echo $PATH is now uncluttered.
* BB installer now hadds a BEGIN and END section to .bashrc. This will be useful for erasing the whole content in uninstallation script.

2022-10-31
* io.sh functions now return 0 (TRUE) and 1 (FALSE). This is done to keep consistency across most functions in library.
* An stable version of input check has been reached and implemented in bb_get_fasta_headers.
* A new version of BB  with this changes released today.

2022-10-28
* io.sh is updated. input_is_empty was moved to "script_has_args". 
* input_is_file_or_pipe was moved to "input_is_pipe".  so Each function now evaluates a specific script state.

2022-10-26
* Input validation now is implemented in a new library called io.sh.
* Created two functions: input_is_empty and input_is_file_or_pipe. 

2022-09-15
* Functional input validation of STDIN/STDOUT (issue #3 in GitHub). Although not yet fully implemented. It partially works on bb_get_fasta_headers but has to be implemented as function.

2022-09-14