@@ -1,0 +1,13 @@
+h2o_c[c]
+M_NAD+[c][c]
+glu__L_c[c]
+M_NADH[c][c]
+M_NADH[c][c]
+M_NADH[c][c]
+M_NH3[c][c]
+M_2_Oxoglutarate[c][c]
+M_h_c[c]
+M_h_c[c]
+M_NADP+[c][c]
+M_NADPH[c][c]
+M_NADPH[c][c]
